<resources>
    <string name="app_name">Retrofit2</string>
    <string name="username_hint">username</string>
    <string name="username_default">devtau</string>
    <string name="enter_github_username">Enter github username:</string>
    <string name="request_data">Request data</string>
    <string name="account_data_formatter" formatted="false">Аккаунт Github: %s\nСайт: %s\nКомпания: %s\nАватара: %s</string>
    <string name="user_info">User info:</string>
    <string name="error">Error:</string>

    <string name="open_session">Open session</string>
    <string name="recognize_file">Recognize file</string>
    <string name="recognize_stream">Recognize stream</string>
    <string name="connect_to_web_socket">Connect to web socket</string>
    <string name="session_id">Current session ID:</string>
    <string name="web_socket_url">Current web socket URL:</string>

    <string name="check_internet_connection">Check your internet connection</string>
    <string name="serializable_object_changed">It looks like one of the serializable objects received from the server has changed</string>
    <string name="internal_server_error">Sorry, it seems we have a server error. Please try again later</string>
    <string name="not_ready">Try again later</string>
    <string name="device_offline">Device offline</string>
    <string name="too_many_requests">Too many attempts. Please try again later</string>
    <string name="comment">Notes</string>
</resources>